--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "socket.io": "^4.8.1",
-    "stripe": "^17.3.1"
+    "stripe": "^17.3.1",
+    "vercel": "^39.3.0"
   }
 }
